--- a/Pages/blog.css
+++ b/Pages/blog.css
@@ -42,13 +42,13 @@
 }
 
 .post-img-4 {
-  background-image: url("/advanced-html-css-build&deploy-website/01-HTML-CSS-Basics-Build-a-Blog-Website/MyBlog/img/blogPos-4.jpg");
+  background-image: url("/MyBlog/img/blogPos-4.jpg");
 }
 .post-img-5 {
-  background-image: url("/advanced-html-css-build&deploy-website/01-HTML-CSS-Basics-Build-a-Blog-Website/MyBlog/img/blogPos-5.jpg");
+  background-image: url("/MyBlog/img/blogPos-5.jpg");
 }
 .post-img-6 {
-  background-image: url("/advanced-html-css-build&deploy-website/01-HTML-CSS-Basics-Build-a-Blog-Website/MyBlog/img/blogPos-6.jpg");
+  background-image: url("./img/blogPos-6.jpg");
 }
 @media screen and (min-width: 1000px) {
   /* body {
